--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "",
+  "author": "fatiha",
   "license": "ISC",
   "devDependencies": {
     "express": "^4.18.2"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
     "validator": "^13.7.0"
